@@ -6,6 +6,7 @@
  Copyright (C) 2000-2006 Keith Godfrey and Maxym Mykhalchuk
                2007-2011 Didier Briel
                2013 Didier Briel, Aaron Madlon-Kay, Piotr Kulik
+               2014 Piotr Kulik
                Home page: http://www.omegat.org/
                Support center: http://groups.yahoo.com/group/OmegaT/
 
@@ -55,7 +56,7 @@ public class XLIFFFilter extends XMLFilter {
     private boolean ignored;
     private ArrayList<String> groupResname = new ArrayList<String>();
     private int groupLevel;
-    private String note;
+    private ArrayList<String> notes = new ArrayList<String>();
     private String text;
     private ArrayList<String> entryText = new ArrayList<String>();
     private ArrayList<List<ProtectedPart>> protectedParts = new ArrayList<List<ProtectedPart>>();
@@ -205,7 +206,7 @@ public class XLIFFFilter extends XMLFilter {
     public void tagEnd(String path) {
         if (path.endsWith("trans-unit/note")) {
             // <trans-unit> <note>'s only 
-            note = text;
+            notes.add(text);
         } else if (path.endsWith("trans-unit")) {
             if (entryParseCallback != null) {
                 StringBuffer buf = new StringBuffer();
@@ -223,7 +224,7 @@ public class XLIFFFilter extends XMLFilter {
                     buf.append('\n');
                 }
 
-                if (note != null) {
+                for (String note : notes) {
                     buf.append(note);
                     buf.append('\n');
                 }
@@ -236,7 +237,7 @@ public class XLIFFFilter extends XMLFilter {
             }
 
             resname = null;
-            note = null;
+            notes.clear();
             entryText.clear();
             protectedParts.clear();
         } else if (path.endsWith("/group")) {
